<resources>
    <string name="app_name">Points Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="none">None</string>

    <string name="number_of_landlords">Number of landlords:</string>
    <string name="name">Name:</string>
    <string name="points_gained">Points gained:</string>
    <string name="add_user">Add User</string>
    <string name="add">Add</string>
    <string name="name_">Name</string>
    <string name="add_user_toast">User added successfully</string>
    <string name="clear">Clear all scores</string>
    <string name="remove_all_scores">Remove all users</string>
    <string name="clearScoreToast">Scores Cleared</string>
    <string name="removeUserToast">Users Removed</string>
    <string name="update_user">Update User</string>
    <string name="update">Update</string>
    <string name="remove_user">Remove User</string>
    <string name="_0">0</string>
    <string name="userUpdated">User updated</string>
    <string name="userRemoved">User removed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="scoreUpdate">Score Updated</string>
    <string name="landlord_win">Landlord win:</string>
    <string name="landlord_lose">Landlord lose:</string>
    <string name="peasant_win">Peasant win:</string>
    <string name="peasant_lose">Peasant lose:</string>
    <string name="I_win">Win</string>
    <string name="I_lose">Lose</string>
</resources>
