<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/updateUser_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/update_user"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/remove_user"
        app:layout_constraintBottom_toBottomOf="@+id/update_button"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/update_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateUser_textView">

        <EditText
            android:id="@+id/numLL_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="@+id/numLandlord_textView"
            app:layout_constraintStart_toEndOf="@+id/numLandlord_textView"
            app:layout_constraintTop_toTopOf="@+id/numLandlord_textView"
            app:layout_constraintVertical_bias="0.661" />

        <EditText
            android:id="@+id/points_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="@+id/numPoints_textView"
            app:layout_constraintEnd_toEndOf="@+id/numLL_edittext"
            app:layout_constraintStart_toStartOf="@+id/numLL_edittext"
            app:layout_constraintTop_toTopOf="@+id/numPoints_textView" />

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name_"
            app:layout_constraintBottom_toBottomOf="@+id/Name_textView"
            app:layout_constraintEnd_toEndOf="@+id/points_edittext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/points_edittext"
            app:layout_constraintTop_toTopOf="@+id/Name_textView" />

        <TextView
            android:id="@+id/Name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="@+id/numPoints_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numPoints_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/points_gained"
            app:layout_constraintEnd_toEndOf="@+id/numLandlord_textView"
            app:layout_constraintTop_toBottomOf="@+id/Name_textView" />

        <TextView
            android:id="@+id/numLandlord_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/number_of_landlords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numPoints_textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>